# ipl-oracle

./: .env.example  .gitignore  HANDOFF.md  README.md  STEERING.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Architecture.md  Glossary.md  Home.md  Multi-Agent-System.md  Schema-Reference.md  Technical-Reference.md
ipl_oracle/: __init__.py  cli.py  orchestrator.py  schemas.py
ipl_oracle/agents/: __init__.py  conditions.py  fixture.py  linkedin.py  narrator.py  opponent.py  scout.py  selector.py  simulator.py  strategist.py
ipl_oracle/data/enrichment/: analyst_insights_2026.json
ipl_oracle/data/enrichment/briefings_2026/: CSK.md  DC.md  GT.md  KKR.md  LSG.md  MI.md  PBKS.md  RCB.md  RR.md  SRH.md
ipl_oracle/data/fixtures/: fixtures.json
ipl_oracle/data/squads/: CSK.json  DC.json  GT.json  KKR.json  LSG.json  MI.json  PBKS.json  RCB.json  RR.json  SRH.json
ipl_oracle/data/venues/: venues.json
ipl_oracle/io/: __init__.py  cricinfo.py  loader.py  state.py
ipl_oracle/optimization/: __init__.py  bayesian.py  calibration.py  mdp.py  milp.py  robust.py
scripts/: ingest_cricsheet.py  refresh_enrichment.py
tests/: test_enrichment.py  test_linkedin.py  test_milp.py  test_optimization.py  test_orchestrator.py  test_retro.py
