[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipl-oracle"
version = "0.1.0"
description = "Multi-agent IPL XI optimizer driven by mathematical optimization"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ipl-oracle contributors" }]
dependencies = [
    "pulp>=2.7.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "pydantic>=2.5",
    "anthropic>=0.34",
    "typer>=0.12",
    "rich>=13.7",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.scripts]
ipl-oracle = "ipl_oracle.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["ipl_oracle*"]

[tool.setuptools.package-data]
ipl_oracle = ["data/**/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"ipl_oracle/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
